--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -15,7 +15,7 @@ on:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/gl-inet/gl-infra-builder.git
+  REPO_URL: https://gitcode.net/qq_33830700/gl-infra-builder.git
   REPO_BRANCH: main
   CONFIG_FILE: Road-axt1800.yml
   WIFI_CONFIG_FILE: mac80211.sh
